force-app/main/default/objects/Solution_Provider_Product__c/Solution_Provider_Product__c.object-meta.xml
<CustomObject>
    <label>Solution Provider Product</label>
    <nameField>
        <label>Solution Provider Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Provider Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>