force-app/main/default/objects/Solution_Provider_Product__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Used to document status changes, urls, and solution provider relationship status changes</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>