force-app/main/default/objects/Solution_Provider_Product__c/fields/Hosting_Type__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Type__c</fullName>
    <description>Defines the hosting type (THIS MUST MATCH PICKLIST IN PRODUCT CATALOG)</description>
    <label>Hosting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Service Bureau</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>