force-app/main/default/objects/Solution_Provider_Product__c/fields/Interface_Type__c.field-meta.xml
<CustomField>
    <fullName>Interface_Type__c</fullName>
    <description>Defines interface type to connect to DI product  (THIS MUST MATCH OF PICKLIST IN PRODUCT CATALOG)</description>
    <label>Interface Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>