force-app/main/default/objects/Solution_Provider_Product__c/fields/Pivotal_Vendor_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Pivotal_Vendor_Product_Id__c</fullName>
    <description>Vendor_Product_Id</description>
    <externalId>true</externalId>
    <label>Pivotal Vendor Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>