force-app/main/default/objects/Solution_Provider_Product__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <label>Product Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>