force-app/main/default/objects/Solution_Provider_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Separates the Core Processing Vendor products from the Product Partner and Integrated Solution Vendor products</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portal Partner</fullName>
            </value>
            <value>
                <fullName>Core Processing Vendor</fullName>
            </value>
            <value>
                <fullName>Integrated Service Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>