force-app/main/default/objects/Solution_Provider_Product__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>A hard-coded value that allows the user to extended search for &quot;ALL&quot; and receive a filtered list of Solution Provider Products without having to memorize all the Products for a DPV, for example.</description>
    <label>Search Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>