force-app/main/default/objects/Solution_Provider_Product__c/fields/Software_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Software_Support_Type__c</fullName>
    <description>Who supports the software?</description>
    <label>Software Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Insight</fullName>
            </value>
            <value>
                <fullName>Digital Insight/CCMC</fullName>
            </value>
            <value>
                <fullName>Digital Insight/SFS</fullName>
            </value>
            <value>
                <fullName>DPV</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>