force-app/main/default/objects/Solution_Provider_Product__c/fields/Solution_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Id__c</fullName>
    <description>Which solution provider owns this product</description>
    <label>Solution Provider</label>
    <referenceTo>Solution_Provider__c</referenceTo>
    <relationshipLabel>Solution Provider Product</relationshipLabel>
    <relationshipName>Solution_Provider_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>