force-app/main/default/objects/Solution_Provider_Product__c/fields/Solution_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Number__c</fullName>
    <label>Solution Provider Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>