force-app/main/default/objects/Solution_Provider_Product__c/fields/Solution_Provider_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Product_Category__c</fullName>
    <description>&quot;Category&quot; - helps filter which solution provider product to choose when quoting (Matches picklist for FI_Vendor.Vendor_Type)</description>
    <label>Solution Provider Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Aggregation</fullName>
            </value>
            <value>
                <fullName>Account Switch</fullName>
            </value>
            <value>
                <fullName>ACH Originator</fullName>
            </value>
            <value>
                <fullName>Alternate Images</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Application – BMA SSO</fullName>
                <label>Application - BMA SSO</label>
            </value>
            <value>
                <fullName>Application - Create Your Own Page SSO</fullName>
            </value>
            <value>
                <fullName>Application - Mobile SSO</fullName>
            </value>
            <value>
                <fullName>Application - Widget SSO</fullName>
            </value>
            <value>
                <fullName>BillPay</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Card Integration</fullName>
            </value>
            <value>
                <fullName>Card Management</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Check Imaging</fullName>
            </value>
            <value>
                <fullName>Check Reorder</fullName>
            </value>
            <value>
                <fullName>Credit Card Rewards</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Data Services-Agg API</fullName>
            </value>
            <value>
                <fullName>Deposit Image</fullName>
            </value>
            <value>
                <fullName>Electronic Tax Payment</fullName>
            </value>
            <value>
                <fullName>FI Application</fullName>
            </value>
            <value>
                <fullName>File Mover</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Funds Transfer</fullName>
            </value>
            <value>
                <fullName>IB Vendor</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Kids Banking</fullName>
            </value>
            <value>
                <fullName>Lender Application Interface</fullName>
            </value>
            <value>
                <fullName>Lender Doc Prep Interface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>