force-app/main/default/objects/Solution_Provider_Product__c/validationRules/Type_is_Core_Processing_Vendor.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_is_Core_Processing_Vendor</fullName>
    <active>true</active>
    <description>A &quot;Core Processing Vendor&quot; product type requires the Support Type and Hosting Type values.</description>
    <errorConditionFormula>AND ( 
     ISPICKVAL( Product_Type__c , &apos;Core Processing Vendor&apos;), 
     OR( ISPICKVAL( Software_Support_Type__c, &apos;&apos; ), 
         ISPICKVAL( Hosting_Type__c, &apos;&apos; ))
)</errorConditionFormula>
    <errorMessage>Software Support Type and Hosting Type are required for Core Processing Vendor products.</errorMessage>
</ValidationRule>