force-app/main/default/objects/Solution_Provider_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Solution_Provider_Id__c</columns>
    <columns>Software_Support_Type__c</columns>
    <columns>Search_Term__c</columns>
    <columns>Solution_Provider_Product_Category__c</columns>
    <columns>Interface_Type__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Solution_Provider_Number__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>