force-app/main/default/objects/Solution_Provider_Product__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Chelsea Fry</value>
    </filters>
    <filters>
        <field>Internal_Status__c</field>
        <operation>contains</operation>
        <value>Available</value>
    </filters>
    <label>All</label>
</ListView>